--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -241,6 +241,7 @@ CONFIG_IOSCHED_CFQ=y
 # CONFIG_IOSCHED_SIOPLUS is not set
 # CONFIG_IOSCHED_TRIPNDROID is not set
 # CONFIG_IOSCHED_VR is not set
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_DEADLINE is not set
@@ -253,6 +254,7 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_ZEN=y
 CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_ASN1=y
