Add cafactive, version of interactive by CodeAurora
Based on commits:
 https://github.com/jjhitel/ASKernel/commit/9984b242a05dbe0b8b25e2fdca49cde1d0a15eff
 https://github.com/jjhitel/ASKernel/commit/8e90d7919841925e013ab0e116f10acca074c282
 https://github.com/jjhitel/ASKernel/commit/0b25cc5b4f8a61a0e577a110e08ba0b62aad7e9f
 https://github.com/jjhitel/ASKernel/commit/1ccd77d010c7403b0c8019051e39d8be54fc71d7
 https://github.com/jjhitel/ASKernel/commit/7c642a36151e1840926827eccdcae0aed01b41e6
 https://github.com/jjhitel/ASKernel/commit/b93b5615ae5b7ffc2002f403f76ba5ebe221c72d
 https://github.com/jjhitel/ASKernel/commit/249aacfd76a425bad6e153172378114bd0b4c22e
 https://github.com/jjhitel/ASKernel/commit/93cf4754c13bb17840aa374839e3d6d620bac800
 https://github.com/jjhitel/ASKernel/commit/8f90aa765a0af64f75ca812a4dfa2a9fe1e6a714
 https://github.com/jjhitel/ASKernel/commit/289e6729c84b3be8088826ff05020a98b54fa29f
 https://github.com/jjhitel/ASKernel/commit/27219e15647f3f98c340d93aa4c1ec011290e22b

Signed-off-by: Park Ju Hyung <qkrwngud825@gmail.com>
Signed-off-by: Derek Basehore <dbasehore@chromium.org>

Adapded by: Alexander Alexeev <alexax66@gmail.com>

Conflicts:
	drivers/cpufreq/Kconfig
	drivers/cpufreq/Makefile
	include/linux/cpufreq.h

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -124,7 +124,16 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE_PRO
 	  Use the CPUFreq governor 'interactivepro' as default. This allows
 	  you to get a full dynamic cpu frequency capable system by simply
 	  loading your cpufreq low-level hardware driver, using the
-	  'interactivepro' governor for latency-sensitive workloads.
+	  'interactive' governor for latency-sensitive workloads.
+
+config CPU_FREQ_DEFAULT_GOV_CAFACTIVE
+	bool "cafactive"
+	select CPU_FREQ_GOV_CAFACTIVE
+	help
+	  Use the CPUFreq governor 'cafactive' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'cafactive' governor for latency-sensitive workloads.
 
 endchoice
 
@@ -181,6 +190,17 @@ config CPU_FREQ_GOV_ONDEMAND
 	  module will be called cpufreq_ondemand.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_CAFACTIVE
+	tristate "'cafactive' cpufreq policy governor"
+	help
+	  'cafactive' - CodeAurora(Qualcomm) version of interactive
+	  cpufreq policy governor.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_cafactive.
 
 	  If in doubt, say N.
 
