--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -40,8 +40,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SandwichKernel"
-CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION="-SandwichKernelv2.0"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -235,12 +235,12 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_FIFO=y
-CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_SIOPLUS=y
-CONFIG_IOSCHED_TRIPNDROID=y
-CONFIG_IOSCHED_VR=y
+# CONFIG_IOSCHED_FIFO is not set
+# CONFIG_IOSCHED_FIOPS is not set
+# CONFIG_IOSCHED_SIO is not set
+# CONFIG_IOSCHED_SIOPLUS is not set
+# CONFIG_IOSCHED_TRIPNDROID is not set
+# CONFIG_IOSCHED_VR is not set
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
@@ -384,7 +384,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -479,14 +479,14 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE_PRO is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
