--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SandwichKernelv2.0"
+CONFIG_LOCALVERSION="-SandwichKernel-v2.5"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -237,8 +237,8 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_IOSCHED_FIFO is not set
 # CONFIG_IOSCHED_FIOPS is not set
-# CONFIG_IOSCHED_SIO is not set
-# CONFIG_IOSCHED_SIOPLUS is not set
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_IOSCHED_TRIPNDROID is not set
 # CONFIG_IOSCHED_VR is not set
 CONFIG_IOSCHED_ZEN=y
