--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -237,8 +237,8 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_IOSCHED_FIFO is not set
 # CONFIG_IOSCHED_FIOPS is not set
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_SIOPLUS=y
+# CONFIG_IOSCHED_SIO is not set
+# CONFIG_IOSCHED_SIOPLUS is not set
 # CONFIG_IOSCHED_TRIPNDROID is not set
 # CONFIG_IOSCHED_VR is not set
 CONFIG_IOSCHED_ZEN=y
@@ -488,7 +488,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
+# CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
