--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -124,16 +124,7 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE_PRO
 	  Use the CPUFreq governor 'interactivepro' as default. This allows
 	  you to get a full dynamic cpu frequency capable system by simply
 	  loading your cpufreq low-level hardware driver, using the
-	  'interactive' governor for latency-sensitive workloads.
-
-config CPU_FREQ_DEFAULT_GOV_CAFACTIVE
-	bool "cafactive"
-	select CPU_FREQ_GOV_CAFACTIVE
-	help
-	  Use the CPUFreq governor 'cafactive' as default. This allows
-	  you to get a full dynamic cpu frequency capable system by simply
-	  loading your cpufreq low-level hardware driver, using the
-	  'cafactive' governor for latency-sensitive workloads.
+	  'interactivepro' governor for latency-sensitive workloads.
 
 endchoice
 
@@ -190,17 +181,6 @@ config CPU_FREQ_GOV_ONDEMAND
 	  module will be called cpufreq_ondemand.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
-
-	  If in doubt, say N.
-
-config CPU_FREQ_GOV_CAFACTIVE
-	tristate "'cafactive' cpufreq policy governor"
-	help
-	  'cafactive' - CodeAurora(Qualcomm) version of interactive
-	  cpufreq policy governor.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called cpufreq_cafactive.
 
 	  If in doubt, say N.
 
