--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -466,6 +466,7 @@ CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 # CONFIG_FOTA_LIMIT is not set
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_SUSPEND_NVS=y
 
 #
 # CPU Frequency scaling
