--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -232,7 +232,7 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_NOOP is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_IOSCHED_FIFO is not set
