--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -252,10 +252,10 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_VR is not set
-CONFIG_DEFAULT_MAPLE=y
+# CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_ROW is not set
-# CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_IOSCHED="maple"
+CONFIG_DEFAULT_ZEN=y
+CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
