--- a/arch/arm64/configs/sandwich_defconfig
+++ b/arch/arm64/configs/sandwich_defconfig
@@ -3478,7 +3478,7 @@ CONFIG_EXYNOS_SNAPSHOT_FREQ=y
 # CONFIG_EXYNOS_SNAPSHOT_HRTIMER is not set
 CONFIG_EXYNOS_SNAPSHOT_SOFTIRQ=y
 # CONFIG_EXYNOS_SNAPSHOT_REG is not set
-CONFIG_EXYNOS_SNAPSHOT_HOOK_LOGGER=y
+# CONFIG_EXYNOS_SNAPSHOT_HOOK_LOGGER is not set
 CONFIG_EXYNOS_SNAPSHOT_PSTORE=y
 CONFIG_EXYNOS_SNAPSHOT_PANIC_REBOOT=y
 CONFIG_EXYNOS_SNAPSHOT_WATCHDOG_RESET=y
